k8s-seft-manager-aws-v2-istio/manifests/movie-web-frontend/frontend/frontend-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: movie-web-frontend-gateway
  namespace: movie-web
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "movie-web-frontend.nhatanhdevops.com"
